--- a/style.css
+++ b/style.css
@@ -27,11 +27,14 @@ nav{
 .nameLogo{
     width: 200px;
 }
+nav ul{
+    flex: 1;
+    text-align: right;
+}
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 50px;
-
+    margin: 0px 20px;
 }
 nav ul li a{
     color: #FFF;
