--- a/style.css
+++ b/style.css
@@ -71,3 +71,33 @@ nav ul li a:hover::after{
 .header_text h1 span{
     color:#FFDF50
 }
+#about{
+    padding: 80px 0;
+    color: #FFF;
+    background-image: url(Res/background.jpg);
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 30px;
+}
+.about-col-2{
+    flex-basis: 60%;
+}
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: #FFDF50;
+}
+.description{
+    font-size: 20px;
+    font-weight: 400;
+    color: #FFF;
+}
