--- a/style.css
+++ b/style.css
@@ -144,5 +144,55 @@ nav ul li a:hover::after{
 }
 #portfolio{
     padding: 50px 0;
-    
+    background-image: url(Res/background.jpg);
+}
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.work1{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work1 img{
+    width: 75%;
+    height: 210px;
+    border-radius: 10px;
+    display: block;
+}
+.work2{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work2 img{
+    width: 90%;
+    height: 210px;
+    border-radius: 10px;
+    display: block;
+}
+.work3{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work3 img{
+    width: 80%;
+    height: 210px;
+    border-radius: 10px;
+    display: block;
+}
+.work4{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work4 img{
+    width: 100%;
+    height: 210px;
+    border-radius: 10px;
+    display: block;
 }
