--- a/style.css
+++ b/style.css
@@ -210,6 +210,20 @@ nav ul li a:hover::after{
     justify-content: center;
     flex-direction: column;
     pad: 0 40px;
-    text-align: center;
-    
+    text-align: center;   
+}
+.layer h3{
+    font-weight: bold;
+    margin-top: 10px;
+}
+.layer a{
+    margin-top: 10px;
+    color: #FFDF50;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 20px;
+    background: #FFDF50;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
 }
