--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ nav ul li a:hover::after{
     height: 210px;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 .work2{
     border-radius: 10px;
@@ -173,6 +174,7 @@ nav ul li a:hover::after{
     height: 210px;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 .work3{
     border-radius: 10px;
@@ -184,6 +186,7 @@ nav ul li a:hover::after{
     height: 210px;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 .work4{
     border-radius: 10px;
@@ -195,11 +198,12 @@ nav ul li a:hover::after{
     height: 210px;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 .layer{
     width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.2), #080808);
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.1), #080808);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -226,4 +230,32 @@ nav ul li a:hover::after{
     width: 20px;
     height: 20px;
     border-radius: 50%;
+}
+.work1:hover img{
+    transform: scale(1.1);
+}
+.work2:hover img{
+    transform: scale(1.1);
+}
+.work3:hover img{
+    transform: scale(1.1);
+}
+.work4:hover img{
+    transform: scale(1.1);
+}
+.work1:hover .layer{
+    height: 100%;
+    transition: 0.2s;
+}
+.work2:hover .layer{
+    height: 100%;
+    transition: 0.2s;
+}
+.work3:hover .layer{
+    height: 100%;
+    transition: 0.2s;
+}
+.work4:hover .layer{
+    height: 100%;
+    transition: 0.2s;
 }
