contact section update

--- a/style.css
+++ b/style.css
@@ -299,3 +299,6 @@ nav ul li a:hover::after{
 .social-icons a img:hover{
     transform: scale(1.1);
 }
+.button.button2{
+    display: inline-block;
+}
