--- a/style.css
+++ b/style.css
@@ -328,3 +328,11 @@ form .button2{
     margin-top: 20px;
     cursor: pointer;
 }
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background-image: url(Res/background.jpg);
+    font-weight: 300;
+    margin-top: 20px;
+}
